# django_rest_framework

./: README.md  pyproject.toml
core/: settings.py  urls.py
rest_api/: models.py  serializers.py  urls.py  views.py
rest_api/migrations/: 0001_initial.py
rest_api_with_class_api_view/: apps.py  models.py  serializers.py  urls.py  views.py
rest_api_with_class_api_view/migrations/: 0001_initial.py
website/: urls.py  views.py
website/templates/: index copy.html  index.html
